# tensorlite

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
cmake/: TensorliteConfig.cmake.in  config.cmake
cmake/modules/: cuRAND.cmake
cmake/tools/: get_cuda_arch.cmake
include/tensorlite/: buffer.h  device.h  dtype.h  float16.h  float16_impl.h  fp16.h  macros.h  tensor.h  tensor_ops.h
python/csrc/: python_api.cc  shape.h  tensor_creation.h  utils.h
python/pytensorlite/: __init__.py
src/tensorlite/: tensor_impl.cc
src/tensorlite/allocator/: allocator.h  buffer_management.cc  cpu_allocator.cc  cpu_allocator.h  cpu_deleter.cc  cuda_allocator.cu  cuda_allocator.h  cuda_deleter.cu  utils.h
src/tensorlite/device/: data_transfer.cc  data_transfer.h  device.cc  device.cu  utils.h
src/tensorlite/dispatch/: device_dispatch.h  device_dispatcher.cc  operator_handle.cc
src/tensorlite/dtype/: dtype.cc  dtype_traits.h
src/tensorlite/tensor_op/: cpu_internal_op.cc  cpu_internal_op.h  cuda_internal_op.cu  cuda_internal_op.cuh  native_ops.cc  tensor_iterator.cc  tensor_iterator.h  tensor_ops.cc
src/tensorlite/tensor_op/cpu/: elementwise.cc
src/tensorlite/tensor_op/cuda/: elementwise.cu
src/tensorlite/utils/: cpu_tools.h  cuda_common.cuh  cuda_common.h  cuda_tools.cuh  cuda_tools.h  function_traits.h  logging.h  native_scalar_ops.h  random.h  singleton.h  thread.h  tool_functions.h
tests/cpp/: CMakeLists.txt  test_cpu_tensor.cc  test_cpu_tensor_op.cc  test_cuda_tensor.cc  test_cuda_tensor_op.cc  test_dtype.cc  test_shape.cc
tests/cpp/cuda/: test_cuda_tensor.cc  test_cuda_tensor_op.cc
tools/: fmt_cpp_srcs.py
